KubernetesSample/greeter-pod-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
  namespace: greeter
spec:
  selector:
    matchLabels:
      run: greeter
  replicas: 1
  template:
    metadata:
      labels:
        run: greeter
    spec:
      containers:
      - name: greeter
        image: myacr0503.azurecr.io/greeter:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: greeter-service
  namespace: greeter
spec:
  ports:
  - port: 80
  selector:
    run: greeter
