KubernetesSample/greeter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: greeter-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greeter-service
            port:
              number: 80
  tls:
  - secretName: aks-grpc-tls
    hosts:
      - demo.azure.com
